--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 
 .menu {
   width: 15vw;
-  height: 8vh;
+  height: 6vh;
   background-color: black;
   display: flex;
   justify-content: center;
@@ -47,7 +47,7 @@ body {
 .right {
   color: white;
   font-size: 1rem;
-  font-family: Arial, sans-serif;
+  font-family: "Arial Black", Arial, sans-serif;
   font-weight: bold;
   font-style: italic;
   transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
@@ -68,7 +68,8 @@ body {
 
 .menu .center {
   font-size: 2.0rem;
-  font-weight: bolder;
+  font-family: "Arial Black", Arial, sans-serif;
+  font-weight: 900;
 }
 
 .menu span {
