--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,14 @@ body {
 
 .menu {
   width: 15vw;
-  height: 6vh;
+  height: 7vh;
   background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 2vw;
-  font-size: 2.2rem;
+  font-size: 2.0rem;
+  color: #FFFFFF;
   font-family: "Arial Black", Arial, sans-serif;
   border-radius: 50%;
   border: 10px solid white;
