--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -1,52 +1,51 @@
-html,
-body {
+
+html, body {
   overflow: hidden;
 }
 
-.project-dev-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-
-.project-dev-icon-container {
+.dev-page {
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: start;
   width: 100vw;
   height: 100vh;
-  /* background-color: red; */
+}
+
+.dev-icon-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  width: 100vw;
+  height: 100vh;
+  /* background-color: peru; */
 }
 
 
-.project-horizontal-scroll {
-  box-sizing: content-box;
+.horizontal-scroll {
   display: flex;
   align-items: center;
   overflow-x: auto;
-  width: 100%;
-  height: 80vh;
+  width: 100vw;
+  height: 100vh;
   white-space: nowrap;
   scroll-behavior: smooth;
   scrollbar-width: none;
   scrollbar-color: transparent;
+  /* background-color: blue; */
 }
 
-.project-horizontal-scroll::-webkit-scrollbar {
-  display: none;
-  /* Oculta a barra de rolagem no Chrome e Safari */
+.horizontal-scroll::-webkit-scrollbar {
+  display: none; /* Oculta a barra de rolagem no Chrome e Safari */
   height: 8px;
 }
 
-.project-horizontal-scroll::-webkit-scrollbar-track {
+.horizontal-scroll::-webkit-scrollbar-track {
   background: transparent;
 }
 
-.project-horizontal-scroll::-webkit-scrollbar-thumb {
+.horizontal-scroll::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 4px;
 }
