Missing the scroll on project pages

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,9 @@
   background-color: black;
 }
 
-
-
 @font-face {
   font-family: "Arial Black";
-  src: url("/assets/fonts/Arial Rounded Bold.ttf") format("truetype");
+  /* src: url("/assets/fonts/ArialBlack.ttf") format("truetype"); */
   font-weight: bold;
   font-style: normal;
 }
