--- a/src/components/CardArticle/CardArticle.modules.css
+++ b/src/components/CardArticle/CardArticle.modules.css
@@ -1,12 +1,11 @@
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
     width: 30vw;
     height: 60vh;
-    padding: 30px;
-    /* background-color: aqua; */
+    padding: 10px;
 }
 
 .card.zero {
@@ -18,7 +17,6 @@
 
 .cover {
     width: 100%;
-    height: auto;
     padding-bottom: 5px;
 }
 
@@ -27,40 +25,40 @@
     border-radius: 15px;
 }
 
-.box-title {
-    width: 30vw;
-    height: auto;
+.box-content {
+    height: 100%;
     border-radius: 15px;
     background-color: #333;
+    box-sizing: border-box;
 }
 
-.box-title.zero {
+.box-content.zero {
     height: 0px;    
     background-color: transparent;
 }
 
 .title-article {
-    width: 30vw;
-    height: auto;
     text-align: left;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.3rem;
+    font-weight: normal;
     word-wrap: break-word;
     white-space: normal;
     overflow-wrap: break-word; 
+    padding: 12px;
     padding-bottom: 10px;
     text-decoration: none;
 }
 
 .descrip-article{
-    width: 30vw;
-    height: auto;
-    text-align: left;
-    font-size: 1.0rem;
+    text-align: left;    
+    font-family: Arial;
+    font-size: 0.8rem;
     word-wrap: break-word;
     white-space: normal;
     overflow-wrap: break-word; 
     text-decoration: none;
+    padding: 12px;
+
 }
 
 @media (max-width: 768px) {
@@ -88,14 +86,14 @@
         border-radius: 15px;
     }
     
-    .box-title {
+    .box-content {
         width: 100%;
         height: 25vh;
         border-radius: 10px;
         background-color: #333;
     }
     
-    .box-title.zero {
+    .box-content.zero {
         height: 0px;    
         background-color: transparent;
     }
