--- a/src/components/CardCell/CardCell.modules.css
+++ b/src/components/CardCell/CardCell.modules.css
@@ -73,7 +73,7 @@
     max-width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 2px;
     text-align: left;
     word-wrap: break-word; /* Quebra palavras longas */
     overflow-wrap: break-word; /* Garante quebra de palavras longas */
@@ -82,18 +82,17 @@
     margin-left: 12px;
 }
 
-
-
 /* Estilização dos textos */
 .text-line1 {
-    font-size: 14px;
+    font-size: 0.75rem;
     font-weight: bold;
     color: white;
 }
 
 .text-line2 {
+    font-family: "Arial";
     font-size: 10px;
-    font-weight: 100;
+    font-weight: normal;
     color: white;
 }
 
