--- a/src/components/CardArticle/CardArticle.modules.css
+++ b/src/components/CardArticle/CardArticle.modules.css
@@ -46,8 +46,9 @@
     white-space: normal;
     overflow-wrap: break-word; 
     text-decoration: none;
-    padding: 10px;
-
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
 }
 
 .descrip-article{
@@ -60,6 +61,7 @@
     text-decoration: none;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 10px;
     padding-bottom: 10px;
 }
 
@@ -76,7 +78,7 @@
         justify-content: start;
         align-items: start;
         width: 70vw;
-        height: 60vh;
+        height: auto;
         padding: 10px;
     }
 
@@ -106,15 +108,18 @@
     }
     
     .title-article {
-        width: 90%;
+        width: 80%;
         height: auto;
         text-align: left;
-        font-size: 0.9rem;
+        font-size: 1.0rem;
         font-weight: bold;
         word-wrap: break-word;
         white-space: normal;
         overflow-wrap: break-word; 
-        padding: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     
     .descrip-article{
