--- a/src/pages/ProjectDetail.modules.css
+++ b/src/pages/ProjectDetail.modules.css
@@ -2,16 +2,16 @@ html, body {
     overflow: hidden;
 }
 
-.dev-icon-container {
+.dev-icon-container-details {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
     width: 100vw;
-    height: 100vh;    
+    height: 100vh; 
 }
 
-.general-container {
+.general-container-details {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +20,7 @@ html, body {
     height: 90vh;
 }
 
-.background {
+.background-details {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,123 +29,125 @@ html, body {
     height: auto;
     border-radius: 1vw;
     background-color: #333;
-    padding: 15px;
 }
 
-.background.vertical {
+.background-details.vertical {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: start;
-    width: auto;
+    width: 60vw; /*Define a largura do bloco de informacoes*/
     height: auto;
+    padding: 15px;
 }
 
-.box-top-description {
+
+.box-top-description-details {
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    width: auto;
+    align-items: flex-start;
+}
+
+.top-details {
+    width: 100%;
     height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+    padding: 15px;
 }
 
-.top {
-    width: 60vw;
-    height: 15vh;
+.top-details.vertical {
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
 }
 
-.top.vertical {
-    width: 40vw;
-    height: 15vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-}
-
-.box-icon {
+.box-icon-details {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
     aspect-ratio: 1 / 1;
-    height: 100%;
+    height: 20%;
 }
 
-.size-icon {
+.size-icon-details { 
     width: auto;
-    height: 100%;
+    height: 20vh;
     border-radius: 10px;
 }
 
-.box-title {
+.box-title-details {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    width: auto;
+    text-align: left;
+    width: 100%;
     height: 100%;
-    padding: 15px;
 }
 
-.title {
-    width: auto;
-    height: 40%;
+.title-details {
+    width: 100%;
+    height: 6vh;
     font-size: 2rem;
     font-weight: bold;
 }
 
-.subtitle {
+.subtitle-details {
     font-family: "Arial";
-    width: auto;
-    height: 30%;
+    width: 100%;
+    height: 9vh;
 }
 
-.box-badgets {
+.box-badgets-details {
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: start;
-    width: 50%;
-    height: 30%;
+    width: 100%;
+    height: 5vh;
 }
 
-.size-badget {
+.size-badget-details {
     width: auto;
     height: 100%;
     border-radius: 5px;
     margin-right: 0.5vw;
 }
 
-.size-badget.hidden {
+.size-badget-details.hidden {
     width: 0px;
     height: 0px;
     border-radius: 5px;
     margin-right: 0.5vw;
 }
 
-.description {
+.description-details {
     width: 60vw;
+    height: auto;
     font-family: "Arial";
     text-align: left;
     align-items: center;
     padding: 15px;
-    background-color: pink;
 }
 
-.description.vertical {
-    width: 40vw;
-    height: 100%;
+.description-details.vertical {
+    width: auto;
+    height: auto;
     text-align: left;
     align-items: center;
 }
 
-.images {
+.images-details {
     width: 60vw;
     height: 40vh;
     overflow-y: hidden;
@@ -156,13 +158,13 @@ html, body {
 }
 
 /* Remove o fundo da scrollbar */
-.images::-webkit-scrollbar {
+.images-details::-webkit-scrollbar {
     height: 8px; /* Define a altura da scrollbar */
     background: transparent; /* Remove o fundo */
 }
 
 /* Transforma o indicador da scrollbar em um círculo */
-.images::-webkit-scrollbar-thumb {
+.images-details::-webkit-scrollbar-thumb {
     background-color: #888;
     border-radius: 50%;
     width: 20px;
@@ -170,11 +172,11 @@ html, body {
 }
 
 /* Esconde a área de rolagem de fundo */
-.images::-webkit-scrollbar-track {
+.images-details::-webkit-scrollbar-track {
     background: transparent;
 }
 
-.images.vertical {
+.images-details.vertical {
     width: 20vw;
     height: 60vh;
     overflow-y: hidden;
@@ -183,12 +185,12 @@ html, body {
     flex-direction: row;
 }
 
-.images.hidden {
+.images-details.hidden {
     width: 0px;
     height: 0px;
 }
 
-.images.only {
+.images-details.only {
     width: auto;
     height: 60vh;
     overflow-y: hidden;
@@ -197,28 +199,38 @@ html, body {
     flex-direction: row;
 }
 
-.size-images {
+.size-images-details {
     width: auto;
     height: 37vh;
     object-fit: contain;
     border-radius: 10px;
 }
 
-.size-images.vertical {
+.size-images-details.vertical {
     width: auto;
     height: 57vh;
     object-fit: contain;
 }
 
-.size-images.only {
-    width: auto;
-    height: 60vh;
+.size-images-details.only {
+    width: 30vw;
+    height: auto;
     object-fit: contain;
 }
 
 
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 768px) {
-    .general-container {
+    .general-container-details {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -228,74 +240,101 @@ html, body {
         margin-bottom: 15vh;
     }
 
-    .background {
+    .background-details {
         width: 85vw;
         border-radius: 1vw;
         background-color: #333;
         padding: 15px;
     }
     
-    .background.vertical {
+    .background-details.vertical {
         width: 85vw;
         flex-direction: column;
     }
 
-    .top {
-        width: 85vw;
-        height: 12vh;
-    }
-    
-    .top.vertical {
-        width: 85vw;
-        height: 12vh;
+    .box-top-description-details {
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
-    .title {
+    .top-details {
         width: 100%;
-        height: 35%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+        padding: 0px;
+    }
+    
+    .top-details.vertical {
+        width: 100%;
+        height: auto;
+    }
+
+    .box-icon-details {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: center;
+        aspect-ratio: 1 / 1;
+    }
+
+    .title-details {
+        width: 100%;
+        height: 4.5vh;
         font-size: 1.4rem;
         text-align: left;
     }
     
-    .subtitle {
-        height: 35%;
+    .subtitle-details {
+        height: 5vh;
         font-size: 0.8rem;
         text-align: left;
     }
 
-    .box-badgets {
+    .box-badgets-details {
         display: flex;
         flex-direction: row;
         justify-content: start;
         align-items: start;
-        width: 50%;
-        height: 25%;
+        width: 100%;
+        height: 3.5vh;
     }
 
-    .size-badget{
+    .size-badget-details {
         width: auto;
-        height: 100%;
+        height: 3.5vh;
         border-radius: 5px;
         margin-right: 5px;
     }
 
 
-    .description {
-        width: 85vw;
+    .description-details {
+        width: 100%;
         font-size: 0.8rem;
         padding: 0px;
         padding-top: 15px;
         padding-bottom: 15px;
     }
     
-    .description.vertical {
-        width: 85vw;
+    .description-details.vertical {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: start;
+        width: 100%;
+        height: auto;
         padding: 0px;
         padding-top: 15px;
         padding-bottom: 15px;
+
     }
 
-    .images {
+    .images-details {
         width: 85vw;
         height: 20vh;
         overflow-y: hidden;
@@ -305,7 +344,7 @@ html, body {
         gap: 10px;
     }
 
-    .images.vertical {
+    .images-details.vertical {
         width: 85vw;
         height: 20vh;
         overflow-y: hidden;
@@ -314,12 +353,12 @@ html, body {
         flex-direction: row;
     }
     
-    .images.hidden {
+    .images-details.hidden {
         width: 0px;
         height: 0px;
     }
     
-    .images.only {
+    .images-details.only {
         width: auto;
         height: 20vh;
         overflow-y: hidden;
@@ -328,26 +367,32 @@ html, body {
         flex-direction: row;
     }
 
-    .size-images {
+    .size-images-details {
         width: auto;
-        height: 18vh;
+        height: 12vh;
         object-fit: contain;
         border-radius: 5px;
         justify-content: center;
         align-items: center;
     }
     
-    .size-images.vertical {
+    .size-images-details.vertical {
         width: auto;
-        height: 18vh;
+        height: auto;
         object-fit: contain;
         justify-content: center;
         align-items: center;
     }
     
-    .size-images.only {
+    .size-images-details.only {
         width: auto;
-        height: 20vh;
+        height: 23vh;
         object-fit: contain;
+    }
+
+    .size-icon-details { 
+        width: auto;
+        height: 13vh;
+        border-radius: 10px;
     }
 }
