put arial black on the logo icon

--- a/src/components/GstvIcon/GstvIcon.modules.css
+++ b/src/components/GstvIcon/GstvIcon.modules.css
@@ -2,7 +2,6 @@
   width: 130px;
   height: 35px;
   margin-bottom: 50px;
-  /* background-color: green; */
 }
 
 .gstv-stroke {
@@ -23,6 +22,7 @@
 
 .gstv-text {
   font-size: 1.2rem;
+  font-family: "Arial Black", Arial, sans-serif;
 }
 
 .black {
