--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: "Arial Black";
-  /* src: url("/assets/fonts/ArialBlack.ttf") format("truetype"); */
+  src: url("/assets/fonts/ArialBlack.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
