--- a/src/pages/Dev.modules.css
+++ b/src/pages/Dev.modules.css
@@ -53,6 +53,7 @@ html, body {
     margin-bottom: 5px;
     font-size: 1.5rem;
     text-align: left;
+    color: white;
 }
 
 .blue p:last-child {
@@ -60,6 +61,7 @@ html, body {
     font-size: 2.4rem;
     margin-top: 0px;
     text-align: left;
+    color: white;
 }
 
 @media (max-width: 768px) {
