--- a/src/components/CardCell/CardCell.modules.css
+++ b/src/components/CardCell/CardCell.modules.css
@@ -1,135 +1,116 @@
-.project-card {
-    height: 400px; /* Altura baseada na proporção 9:16 */
-    max-height: 400px; /* Altura baseada na proporção 9:16 */
-    border-radius: 12px;
+.content-card {
+    width: auto;
+    height: auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
-    padding: 12px;
-    gap: 12px;
-}
-
-.card-title {
-    height: 80%; /* Altura baseada na proporção 9:16 */
-    max-height: 80%; /* Altura baseada na proporção 9:16 */
-    border-radius: 12px;
-    flex: 1; /* Ocupa espaço restante */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden; /* Garante que a imagem não ultrapasse os limites */
-}
-
-.card-title.small {
-    width: 100px;
-    height: 20px; /* Altura baseada na proporção 9:16 */
-}
-
-.card-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Mantém a proporção e preenche a área */
-    border-radius: 10px;
-}
-
-/* Novo quadrado abaixo do cartão */
-.card-footer {
-    width: 200px;
-    max-width: 200px; /* Largura fixa */
-    height: 20%; /* 30% da altura do card */
-    max-height: 20%; /* 30% da altura do card */
     background-color: #333;
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
 }
 
-.card-footer.transparent {
+.content-card.transparent {
+    width: 60px;
     background-color: transparent;
-    width: 100px;
 }
 
-/* Quadrado verde alinhado à esquerda */
+.poster {
+    width: auto;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.poster-image {
+    height: 100%;
+    width: auto;
+    object-fit: cover; 
+}
+
+.footer {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 8px;
+    gap: 8px;
+}
+
 .square-icon {
-    width: 55px;
-    height: 55px;
+    width: auto;
+    height: 100%;
     border-radius: 8px;
-    margin-left: 12px;
-    overflow: hidden; /* Garante que a imagem não ultrapasse os limites */
+    margin: 2px;
+    overflow: hidden;
 }
 
 .icon-image {
-    width: 100%;
+    width: auto;
     height: 100%;
-    object-fit: contain; /* Garante que a imagem do ícone se ajuste corretamente */
-    overflow: hidden; /* Garante que a imagem não ultrapasse os limites */
+    object-fit: contain;
+    overflow: hidden; 
 }
 
-/* Container dos textos */
 .text-container {
-    max-width: 50%;
+    width: 70%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2px;
     text-align: left;
-    word-wrap: break-word; /* Quebra palavras longas */
-    overflow-wrap: break-word; /* Garante quebra de palavras longas */
-    white-space: normal; /* Permite quebras de linha naturais */
-    /* background-color: #333; */
-    margin-left: 12px;
+    align-items: start;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal; 
 }
 
-/* Estilização dos textos */
 .text-line1 {
-    font-size: 0.75rem;
+    font-size: 1.0rem;
     color: white;
 }
 
 .text-line2 {
-    font-size: 10px;
+    font-size: 0.7rem;
+    font-family: "Arial";
     color: white;
 }
 
 @media (max-width: 768px) {
 
-    .project-card {
-        width: 90vw;
-        height: auto; /* Altura baseada na proporção 9:16 */
-        border-radius: 12px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 18px;
-        padding: 12px;
-        gap: 12px;
-    }
-
-    .card-title {
-        width: 200px;
-        height: 60vh;
-    }
-
-    .card-footer.transparent {
-        background-color: transparent;
-        width: 20px;
-    }
-
-    .card-title.small {
+    .content-card.transparent {
         width: 10px;
-        height: 20px; /* Altura baseada na proporção 9:16 */
+        background-color: transparent;
     }
 
-    .card-footer {
+    .poster {
         width: auto;
-        /* max-width: 200px; */
-        height: 10vh;
-        max-height: 20%;
-        background-color: #333;
+        height: 45vh;
         display: flex;
+        justify-content: center;
         align-items: center;
-        border-radius: 8px;
     }
+
+    .footer {
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        box-sizing: border-box;
+        padding: 8px;
+        gap: 8px;
+    }   
+
+    .text-line1 {
+        font-size: 0.7rem;
+        color: white;
+    }
+    
+    .text-line2 {
+        font-size: 0.6rem;
+        font-family: "Arial";
+        color: white;
+    }
+
 }
