--- a/src/pages/Projects.modules.css
+++ b/src/pages/Projects.modules.css
@@ -34,26 +34,17 @@ html, body {
   overflow-x: auto;
   width: 100vw;
   height: auto;
+  gap: 20px;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer e Edge */
 }
-
 
 .horizontal-scroll-products::-webkit-scrollbar {
-  height: 8px;
-  background: transparent; /* Remove o fundo */
-}
-
-.horizontal-scroll-products::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.horizontal-scroll-products::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 50%;
+  display: none; /* Esconde a scrollbar no Chrome, Safari e Edge */
 }
 
 
 @media (max-width: 768px) {
-  
   .box-content-projects {
     display: flex;
     align-items: center;
@@ -61,9 +52,4 @@ html, body {
     width: 100vw;
     height: 60vh;
   }
-
-  .horizontal-scroll-products {
-      height: auto;
-  }
-
 }
