--- a/src/pages/Dev.modules.css
+++ b/src/pages/Dev.modules.css
@@ -8,29 +8,33 @@ html, body {
     justify-content: start;
     align-items: start;
     width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
-    /* background-color: greenyellow; */
+    height: 80vh;
+    /* background-color: green; */
 }
 
 .content {
+    width: 100%;
+    height: 80%;
     display: flex;
-    /* background-color: greenyellow; */
+    justify-content: start;
+    align-items: start;
+    gap: 60px;
+    /* background-color: orange; */
 }
 
 .red {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 35vw;
-    height: 88vh;
+    width: auto;
+    height: 100%;
     margin-left: 10vw;
     /* background-color: red; */
 }
 
 .image-3d {
-    max-width: 100%;
-    max-height: 100%;
+    width: auto;
+    height: 100%;
 }
 
 .blue {
@@ -40,19 +44,16 @@ html, body {
     justify-content:  center;
     align-items: start;
     width: 35vw;
-    max-height: 88vh;
-    padding-left: 20px;
-    padding-right: 40px;
-    padding-bottom: 50px;
+    height: 100%;
     /* background-color: blue; */
 }
-
 
 .blue p:first-child {
     margin-bottom: 5px;
     font-size: 1.5rem;
     text-align: left;
     color: white;
+    font-family: "Arial";
 }
 
 .blue p:last-child {
@@ -68,9 +69,8 @@ html, body {
         flex-direction: column;
         justify-content: start;
         align-items: start;
-        max-width: 100vw;
+        width: 100vw;
         height: 100vh;
-        /* background-color: greenyellow; */
     }
 
     .content {
@@ -80,47 +80,38 @@ html, body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        /* background-color: gold; */
+        gap: 0px;
     }
 
     .red {
         width: 80vw;
-        height: 20vh;
-        /* background-color: red; */
-        margin-left: 0vw;
-        padding-top: 0px;
+        height: auto;
+        margin-left: 0px;
     }
 
     .image-3d {
-        max-height: 100%;
-        content: url('../assets/3dobj-horizontal.png'); /* Substitua pelo caminho correto da nova imagem */
-        transform: rotate(0deg); /* Se quiser mudar a rotação no mobile */
-      }
+        width: 100%;
+        content: url('../assets/estampa-rotate.png'); /* Substitua pelo caminho correto da nova imagem */
+    }
     
     .blue {
         display: flex;
         flex-direction: column;
         justify-content: start;
         align-items: start;
-        max-width: 80vw;
         width: 80vw;
-        height: 69vh;
-        /* background-color: blue; */
-        padding-left: 0px;
-        padding-right: 0px;
+        height: 70%;
     }
 
     .blue p:first-child {
         margin-bottom: 5px;
-        font-size: 1.0rem;
+        font-size: 0.8rem;
         text-align: left;
     }
     
     .blue p:last-child {
-        font-size: 1.6rem;
-        margin-top: 0px;
+        font-size: 1.2rem;
         text-align: left;
-        padding-right: 10vw;
     }
 
     .icon {
@@ -129,7 +120,6 @@ html, body {
         width: 100vw;
         height: 8vh;
         padding-left: 0px;
-        /* background-color: orange; */
         z-index: 1;
     }
 }
