fix the menu top

--- a/src/pages/Dev.modules.css
+++ b/src/pages/Dev.modules.css
@@ -49,7 +49,6 @@ html, body {
 }
 
 .blue p:first-child {
-    margin-bottom: 5px;
     font-size: 1.5rem;
     text-align: left;
     color: white;
@@ -70,21 +69,22 @@ html, body {
         justify-content: start;
         align-items: start;
         width: 100vw;
-        height: 100vh;
+        height: 80vh;
     }
 
     .content {
         width: 100vw;
-        height: 90vh;
+        height: 80vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 0px;
+        padding-top: 16px;
     }
 
     .red {
-        width: 80vw;
+        width: 70vw;
         height: auto;
         margin-left: 0px;
     }
