--- a/src/components/MenuTopo/MenuTopo.modules.css
+++ b/src/components/MenuTopo/MenuTopo.modules.css
@@ -12,11 +12,30 @@
     display: flex;
     box-sizing: border-box;
     justify-content: start;
-    padding-left: 10vw;
+    padding-left: 4vw;
     padding-top: 3.5vh;
     width: 50%;
     height: 100%;
-    /* background-color: blue; */
+    gap: 6vw;
+}
+
+.back-button {
+    background: none;
+    border: none;
+    padding: 0px;
+    font-size: 30px;
+    color: white; 
+    font-weight: bold;
+}
+
+.back-button:hover,
+.back-button:focus,
+.back-button:active {
+    color: #0f0;
+    background: none;
+    outline: none;
+    box-shadow: none;
+    text-decoration: none;
 }
 
 /* Direita - fundo vermelho */
@@ -24,19 +43,19 @@
     display: flex;
     box-sizing: border-box;
     flex-direction: row;
-    align-items: center;
+    align-items: end;
     justify-content: end;
     width: 50%;
     height: 100%;
     gap: 20px;
-    padding-top: 3.5vh;
-    padding-right: 10vw;
     font-size: 1.2rem;
     color: white;
-    /* background-color: red; */
+    padding-right: 4vw;
+    padding-bottom: 12px;
 }
 
 .menu-topicos {
+    /* padding-bottom: ; */
     /* background-color: #00ff00; */
 }
 
@@ -45,7 +64,7 @@
     color: white;
     font-size: 1.2rem;
     transition: color 0.3s;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .menu-link:hover {
@@ -55,7 +74,6 @@
 .menu-icons {
     display: inline-flex;
     gap: 12px;
-    /* background-color: red; */
 }
 
 .menu-icon {
@@ -73,7 +91,7 @@
     display: inline-block;
   }
   
-  .tooltip {
+.tooltip {
     position: absolute;
     bottom: 120%;
     left: 50%;
@@ -87,13 +105,13 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  }
-  
-  .tooltip-container:hover .tooltip,
-  .tooltip-container:focus .tooltip {
+}
+
+.tooltip-container:hover .tooltip,
+.tooltip-container:focus .tooltip {
     opacity: 1;
     visibility: visible;
-  }
+}
 
 @media (max-width: 768px) {
     .menu-top {
@@ -106,24 +124,23 @@
 
     .menu-left {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-left: 0vw;
-        padding-top: 3.5vh;
-        width: 100%;
-        height: 10vh;
+        justify-content: center; /* Centraliza tudo */
+        width: 100%; /* Ocupa toda a largura */
+        position: relative; /* Permite posicionamento absoluto */
+    }
+
+    .back-button {
+        position: absolute;
+        left: 15px; /* Posiciona o chevron à esquerda */
     }
 
     .menu-right {
         width: 100%;
-        height: 13vh;
+        height: auto;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-top: 1.0vh;
-        padding-bottom: 2.5vh;
         padding-right: 0vw;
-        gap: 10px;
     }
 
     .menu-link {
