Only in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-family: "Arial-Black", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
 
-  color-scheme: light dark;
+  color-scheme: only dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
